# hex-mcp

./: .dockerignore  Dockerfile  README.md  pyproject.toml
server/: mm_mcp_server.py
