[project]
name = "hex-mm-mcp"
version = "0.1.0"
description = "This is a HexagonML MCP server that provides a Model context protocol interface for HexagonML ModelManager tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mmanager==2.3.9",
    "ipython>=8.12.0",
    "fastmcp>=2.13.1",
]
